crates/markdown-neuraxis-syntax/src/snapshots/blocks/blockquote_nested.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..273
  BLOCK_QUOTE@0..13
    GT@0..1 ">"
    WHITESPACE@1..2 " "
    TEXT@2..12 "Blockquote"
    NEWLINE@12..13 "\\n"
  BLOCK_QUOTE@13..25
    GT@13..14 ">"
    WHITESPACE@14..15 " "
    TEXT@15..24 "multiline"
    NEWLINE@24..25 "\\n"
  BLOCK_QUOTE@25..28
    GT@25..26 ">"
    WHITESPACE@26..27 " "
    NEWLINE@27..28 "\\n"
  BLOCK_QUOTE@28..75
    GT@28..29 ">"
    WHITESPACE@29..30 " "
    DOT@30..31 "."
    DOT@31..32 "."
    DOT@32..33 "."
    TEXT@33..42 "continued"
    WHITESPACE@42..43 " "
    TEXT@43..48 "after"
    WHITESPACE@48..49 " "
    TEXT@49..57 "trailing"
    WHITESPACE@57..58 " "
    TEXT@58..63 "space"
    WHITESPACE@63..64 " "
    TEXT@64..67 "and"
    WHITESPACE@67..68 " "
    TEXT@68..72 "with"
    WHITESPACE@72..74 "  "
    NEWLINE@74..75 "\\n"
  BLOCK_QUOTE@75..87
    GT@75..76 ">"
    WHITESPACE@76..77 " "
    TEXT@77..86 "hardbreak"
    NEWLINE@86..87 "\\n"
  BLOCK_QUOTE@87..89
    GT@87..88 ">"
    NEWLINE@88..89 "\\n"
  BLOCK_QUOTE@89..129
    GT@89..90 ">"
    WHITESPACE@90..91 " "
    DOT@91..92 "."
    DOT@92..93 "."
    DOT@93..94 "."
    WHITESPACE@94..95 " "
    TEXT@95..104 "continued"
    WHITESPACE@104..105 " "
    TEXT@105..112 "without"
    WHITESPACE@112..113 " "
    TEXT@113..121 "trailing"
    WHITESPACE@121..122 " "
    TEXT@122..127 "space"
    DOT@127..128 "."
    NEWLINE@128..129 "\\n"
  BLOCK_QUOTE@129..146
    GT@129..130 ">"
    WHITESPACE@130..131 " "
    TEXT@131..137 "Nested"
    WHITESPACE@137..138 " "
    TEXT@138..144 "quotes"
    COLON@144..145 ":"
    NEWLINE@145..146 "\\n"
  BLOCK_QUOTE@146..162
    GT@146..147 ">"
    WHITESPACE@147..148 " "
    BLOCK_QUOTE@148..162
      GT@148..149 ">"
      WHITESPACE@149..150 " "
      TEXT@150..155 "Inner"
      WHITESPACE@155..156 " "
      TEXT@156..161 "quote"
      NEWLINE@161..162 "\\n"
  BLOCK_QUOTE@162..181
    GT@162..163 ">"
    WHITESPACE@163..164 " "
    BLOCK_QUOTE@164..181
      GT@164..165 ">"
      WHITESPACE@165..166 " "
      TEXT@166..170 "also"
      WHITESPACE@170..171 " "
      TEXT@171..180 "multiline"
      NEWLINE@180..181 "\\n"
  BLOCK_QUOTE@181..202
    GT@181..182 ">"
    WHITESPACE@182..183 " "
    BLOCK_QUOTE@183..202
      GT@183..184 ">"
      WHITESPACE@184..185 " "
      BLOCK_QUOTE@185..201
        GT@185..186 ">"
        WHITESPACE@186..187 " "
        TEXT@187..194 "Deepest"
        WHITESPACE@194..195 " "
        TEXT@195..200 "quote"
        NEWLINE@200..201 "\\n"
      NEWLINE@201..202 "\\n"
  PARAGRAPH@202..225
    TEXT@202..209 "Nesting"
    WHITESPACE@209..210 " "
    TEXT@210..217 "without"
    WHITESPACE@217..218 " "
    TEXT@218..223 "space"
    COLON@223..224 ":"
    NEWLINE@224..225 "\\n"
  NEWLINE@225..226 "\\n"
  BLOCK_QUOTE@226..240
    GT@226..227 ">"
    WHITESPACE@227..228 " "
    TEXT@228..233 "Outer"
    WHITESPACE@233..234 " "
    TEXT@234..239 "quote"
    NEWLINE@239..240 "\\n"
  BLOCK_QUOTE@240..255
    GT@240..241 ">"
    BLOCK_QUOTE@241..255
      GT@241..242 ">"
      WHITESPACE@242..243 " "
      TEXT@243..248 "Inner"
      WHITESPACE@248..249 " "
      TEXT@249..254 "quote"
      NEWLINE@254..255 "\\n"
  BLOCK_QUOTE@255..273
    GT@255..256 ">"
    BLOCK_QUOTE@256..273
      GT@256..257 ">"
      BLOCK_QUOTE@257..273
        GT@257..258 ">"
        WHITESPACE@258..259 " "
        TEXT@259..266 "Deepest"
        WHITESPACE@266..267 " "
        TEXT@267..272 "quote"
        NEWLINE@272..273 "\\n"
