crates/markdown-neuraxis-syntax/src/snapshots/blocks/blockquote_single.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..24
  BLOCK_QUOTE@0..24
    GT@0..1 ">"
    WHITESPACE@1..2 " "
    TEXT@2..6 "This"
    WHITESPACE@6..7 " "
    TEXT@7..9 "is"
    WHITESPACE@9..10 " "
    TEXT@10..11 "a"
    WHITESPACE@11..12 " "
    TEXT@12..22 "blockquote"
    DOT@22..23 "."
    NEWLINE@23..24 "\\n"
