crates/markdown-neuraxis-syntax/src/snapshots/blocks/code_fenced_backtick.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..25
  FENCED_CODE@0..25
    BACKTICK@0..1 "`"
    BACKTICK@1..2 "`"
    BACKTICK@2..3 "`"
    NEWLINE@3..4 "\\n"
    TEXT@4..9 "plain"
    WHITESPACE@9..10 " "
    TEXT@10..14 "code"
    WHITESPACE@14..15 " "
    TEXT@15..20 "block"
    NEWLINE@20..21 "\\n"
    BACKTICK@21..22 "`"
    BACKTICK@22..23 "`"
    BACKTICK@23..24 "`"
    NEWLINE@24..25 "\\n"
