crates/markdown-neuraxis-syntax/src/snapshots/blocks/code_fenced_tilde.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..25
  FENCED_CODE@0..25
    TILDE@0..1 "~"
    TILDE@1..2 "~"
    TILDE@2..3 "~"
    NEWLINE@3..4 "\\n"
    TEXT@4..9 "tilde"
    WHITESPACE@9..10 " "
    TEXT@10..14 "code"
    WHITESPACE@14..15 " "
    TEXT@15..20 "block"
    NEWLINE@20..21 "\\n"
    TILDE@21..22 "~"
    TILDE@22..23 "~"
    TILDE@23..24 "~"
    NEWLINE@24..25 "\\n"
