crates/markdown-neuraxis-syntax/src/snapshots/blocks/code_indented.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..50
  INDENTED_CODE@0..50
    WHITESPACE@0..4 "    "
    TEXT@4..12 "indented"
    WHITESPACE@12..13 " "
    TEXT@13..17 "code"
    WHITESPACE@17..18 " "
    TEXT@18..22 "line"
    WHITESPACE@22..23 " "
    TEXT@23..24 "1"
    NEWLINE@24..25 "\\n"
    WHITESPACE@25..29 "    "
    TEXT@29..37 "indented"
    WHITESPACE@37..38 " "
    TEXT@38..42 "code"
    WHITESPACE@42..43 " "
    TEXT@43..47 "line"
    WHITESPACE@47..48 " "
    TEXT@48..49 "2"
    NEWLINE@49..50 "\\n"
