crates/markdown-neuraxis-syntax/src/snapshots/blocks/frontmatter.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..96
  FRONTMATTER@0..68
    DASH@0..1 "-"
    DASH@1..2 "-"
    DASH@2..3 "-"
    NEWLINE@3..4 "\\n"
    TEXT@4..9 "title"
    COLON@9..10 ":"
    WHITESPACE@10..11 " "
    TEXT@11..15 "Test"
    WHITESPACE@15..16 " "
    TEXT@16..24 "Document"
    NEWLINE@24..25 "\\n"
    TEXT@25..29 "date"
    COLON@29..30 ":"
    WHITESPACE@30..31 " "
    TEXT@31..35 "2024"
    DASH@35..36 "-"
    TEXT@36..38 "01"
    DASH@38..39 "-"
    TEXT@39..41 "15"
    NEWLINE@41..42 "\\n"
    TEXT@42..46 "tags"
    COLON@46..47 ":"
    WHITESPACE@47..48 " "
    LBRACKET@48..49 "["
    TEXT@49..54 "test,"
    WHITESPACE@54..55 " "
    TEXT@55..62 "example"
    RBRACKET@62..63 "]"
    NEWLINE@63..64 "\\n"
    DASH@64..65 "-"
    DASH@65..66 "-"
    DASH@66..67 "-"
    NEWLINE@67..68 "\\n"
  NEWLINE@68..69 "\\n"
  PARAGRAPH@69..96
    TEXT@69..76 "Content"
    WHITESPACE@76..77 " "
    TEXT@77..82 "after"
    WHITESPACE@82..83 " "
    TEXT@83..94 "frontmatter"
    DOT@94..95 "."
    NEWLINE@95..96 "\\n"
