crates/markdown-neuraxis-syntax/src/snapshots/blocks/heading_h3.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..20
  HEADING@0..20
    HASH@0..1 "#"
    HASH@1..2 "#"
    HASH@2..3 "#"
    WHITESPACE@3..4 " "
    TEXT@4..9 "Level"
    WHITESPACE@9..10 " "
    TEXT@10..11 "3"
    WHITESPACE@11..12 " "
    TEXT@12..19 "Heading"
    NEWLINE@19..20 "\\n"
